[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-creator-automation"
version = "0.1.0"
description = "Automated YouTube Shorts and Facebook Reels generator using Vertex AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "google-cloud-aiplatform",
    "google-cloud-texttospeech",
    "google-auth-oauthlib",
    "google-api-python-client",
    "google-genai",
    "playwright",
    "openai-whisper",
    "python-dotenv",
    "peewee"
]
